--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <title>Scheduler</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class="font-monospace">
+    
+    <nav class="navbar navbar-expand-lg bg-info">
+        <div class="container d-flex justify-content-between">
+            <h3 class="navbar-brand fw-bold text-dark fs-3">Appointment Booking System</h3>
+            <div class="flex">
+                <!-- <span class="navbar-text me-3" th:text="'Welcome, ' + ${user.name} + ' (Student)'"></span> -->
+                <!-- <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a> -->
+            </div>
+        </div>
+    </nav>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-                
-            </div>
+            <div class="col-md-12">
+                <div class="card ">
+                    <div class="card-header text-dark bg-info pt-4 ">
+                        <h6>Welcome to Appointment Booking System</h6>
+                        <h5 class="mb-0 ">LOGIN</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="alert alert-success" th:if="${message != null and !#strings.isEmpty(message)}" th:text="${message}"></div>
+                        <div class="alert alert-danger" th:if="${error != null and !#strings.isEmpty(error)}" th:text="${error}"></div>
+                        <form action="/login" method="post">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <div class="mb-0 text-center">
+                                <button type="submit" class="btn bg-info text-dark fw-bold">LOGIN</button>
+                            </div>
+
+                        </form>
+
+                        <div class="mb-0 text-end">
+                            Don't have an account? <a href="/signup">Create account</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>            
+            
+            
         </div>
         
 
-        </div>
-        
     </div>
+        
 </body>
 </html>
