--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -68,7 +68,15 @@
                         </thead>
 
                         <tbody>
-                            <tr th:each="slot, iter : ${timeSlots}">
+                            <tr th:each="slot, iter : ${timeSlots}"
+                            th:data-slot-id="${slot.id}"
+                            th:data-slot-date="${slot.date}"
+                            th:data-slot-start="${slot.startTime}"
+                            th:data-slot-end="${slot.endTime}"
+                            th:data-slot-status="${slot.status.name()}"
+                            th:data-group-title="${appointmentGroup.title}"
+                            th:classappend="${slot.status.name() == 'AVAILABLE' ? 'slot-active' : slot.status.name() == 'BOOKED' ? 'slot-active' : 'slot-inactive'}"
+                            style = "cursor:pointer">
                                 <td th:text="${iter.count}">1</td>
                                 <td th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}">10/13/2025</td>
                                 <td th:text="${slot.startTime}">12:00 PM</td>
@@ -81,8 +89,13 @@
                                     </span>
 
                                     <span th:if="${slot.status.name() == 'BOOKED'}" 
+                                        class="badge text-info">
+                                        <i class="bi bi-check-circle"></i> Booked
+                                    </span>
+
+                                    <span th:if="${slot.status.name() == 'CANCELLED'}" 
                                         class="badge text-danger">
-                                        <i class="bi bi-x-circle"></i> Booked
+                                        <i class="bi bi-ban"></i> Unavailable
                                     </span>
                                 </td>
                             </tr>
@@ -93,6 +106,59 @@
 
                 
             </div>
+
+            <!-- Make Available Modal for Professor-->
+            <div class="modal fade" id="availProfModal" tabindex="-1" aria-labelledby="availProfModalLabel" aria-hidden="true">
+                <div class="modal-dialog text-align-center">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="availProfModalModalLabel">Confirm Action</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Please confirm you want to make this slot available again:
+                            <div class="border p-2 bg-dark">
+                                <h5 class="mb-2"><strong><span id="group-title"></span></strong></h5>
+                                <p class="mb-1"><strong>Date:</strong> <span id="modal-date"></span></p>
+                                <p class="mb-1"><strong>Time:</strong> <span id="modal-start"></span> - <span id="modal-end"></span></p>
+                            </div>
+                            <form action="/professor/bookings/avail" method="post" id="availProfForm">
+                                <input type="hidden" name="slotId" id="slot-id">
+                            </form>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="submit" form="availProfForm" class="btn btn-outline-success">Make Available</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cancellation Modal for Professor-->
+            <div class="modal fade" id="cancelProfModal" tabindex="-1" aria-labelledby="cancelProfModalLabel" aria-hidden="true">
+                <div class="modal-dialog text-align-center">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="cancelProfModalLabel">Confirm Action</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Please confirm you want to mark this slot Unavailable:
+                            <div class="border p-2 bg-dark">
+                                <h5 class="mb-2"><strong><span id="c-group-title"></span></strong></h5>
+                                <p class="mb-1"><strong>Date:</strong> <span id="c-modal-date"></span></p>
+                                <p class="mb-1"><strong>Time:</strong> <span id="c-modal-start"></span> - <span id="c-modal-end"></span></p>
+                            </div>
+                            <form action="/professor/bookings/cancel" method="post" id="cancelProfForm">
+                                <input type="hidden" name="slotId" id="c-slot-id">
+                            </form>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="submit" form="cancelProfForm" class="btn btn-outline-danger">Make Unavailable</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- Student UI  -->
         <div class="row justify-content-center" th:if="${currentUser.role.name() == 'STUDENT'}">
@@ -147,8 +213,8 @@
                             th:data-slot-end="${slot.endTime}"
                             th:data-slot-status="${slot.status.name()}"
                             th:data-group-title="${appointmentGroup.title}"
-                            th:classappend="${slot.status.name() == 'AVAILABLE' ? 'slot-available' : ''}"
-                            th:style="${slot.status.name() == 'AVAILABLE' ? 'cursor: pointer;' : ''}">
+                            th:classappend="${slot.status.name() == 'AVAILABLE' ? 'slot-available' : slot.status.name() == 'BOOKED' ? 'slot-booked' : 'slot-unavailable'}"
+                            style = "cursor:pointer">
                                 <td th:text="${iter.count}">1</td>
                                 <td th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}">10/13/2025</td>
                                 <td th:text="${slot.startTime}">12:00 PM</td>
@@ -161,8 +227,13 @@
                                     </span>
 
                                     <span th:if="${slot.status.name() == 'BOOKED'}" 
+                                        class="badge text-info">
+                                        <i class="bi bi-check-circle"></i> Booked
+                                    </span>
+
+                                    <span th:if="${slot.status.name() == 'CANCELLED'}" 
                                         class="badge text-danger">
-                                        <i class="bi bi-x-circle"></i> Booked
+                                        <i class="bi bi-ban"></i> Unavailable
                                     </span>
                                 </td>
                             </tr>
@@ -200,15 +271,83 @@
                 </div>
             </div>
 
+            <!-- Cancel Confirmation Modal -->
+            <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+                <div class="modal-dialog text-align-center">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="cancelModalLabel">Confirm Cancellation</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Please confirm your cancellation for the following time slot:
+                            <div class="border p-2 bg-dark">
+                                <h5 class="mb-2"><strong><span id="c-group-title"></span></strong></h5>
+                                <p class="mb-1"><strong>Date:</strong> <span id="c-modal-date"></span></p>
+                                <p class="mb-1"><strong>Time:</strong> <span id="c-modal-start"></span> - <span id="c-modal-end"></span></p>
+                            </div>
+                            <form action="/student/bookings/cancel" method="post" id="cancelForm">
+                                <input type="hidden" name="slotId" id="c-slot-id">
+                            </form>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="submit" form="cancelForm" class="btn btn-outline-danger">Confirm Cancellation</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
+
+    // Professor booking JavaScript:
+    document.addEventListener('DOMContentLoaded', function() {
+        const activeSlots = document.querySelectorAll('.slot-active');
+        const cancelProfModal = new bootstrap.Modal(document.getElementById('cancelProfModal'));
+        
+        activeSlots.forEach(function(row) {
+            row.addEventListener('click', function() {
+                document.getElementById('c-group-title').textContent = this.getAttribute('data-group-title');
+                document.getElementById('c-slot-id').value = this.getAttribute('data-slot-id');
+                document.getElementById('c-modal-date').textContent = this.getAttribute('data-slot-date');
+                document.getElementById('c-modal-start').textContent = this.getAttribute('data-slot-start');
+                document.getElementById('c-modal-end').textContent = this.getAttribute('data-slot-end');
+                
+                cancelProfModal.show();
+
+            });
+        });
+    });
+
+    document.addEventListener('DOMContentLoaded', function() {
+        const inactiveSlots = document.querySelectorAll('.slot-inactive');
+        const availProfModal = new bootstrap.Modal(document.getElementById('availProfModal'));
+        
+        inactiveSlots.forEach(function(row) {
+            row.addEventListener('click', function() {
+                document.getElementById('group-title').textContent = this.getAttribute('data-group-title');
+                document.getElementById('slot-id').value = this.getAttribute('data-slot-id');
+                document.getElementById('modal-date').textContent = this.getAttribute('data-slot-date');
+                document.getElementById('modal-start').textContent = this.getAttribute('data-slot-start');
+                document.getElementById('modal-end').textContent = this.getAttribute('data-slot-end');
+                
+                availProfModal.show();
+
+            });
+        });
+    });
+
+
+    // Student Booking JavaScript
+    // Booking Modal Script
     document.addEventListener('DOMContentLoaded', function() {
         const availableSlots = document.querySelectorAll('.slot-available');
         const bookingModal = new bootstrap.Modal(document.getElementById('bookingModal'));
+
         
         availableSlots.forEach(function(row) {
             row.addEventListener('click', function() {
@@ -217,7 +356,28 @@
                 document.getElementById('modal-date').textContent = this.getAttribute('data-slot-date');
                 document.getElementById('modal-start').textContent = this.getAttribute('data-slot-start');
                 document.getElementById('modal-end').textContent = this.getAttribute('data-slot-end');
+
                 bookingModal.show();
+
+            });
+        });
+    });
+
+    // Cancel Booking Modal Script
+    document.addEventListener('DOMContentLoaded', function() {
+        const bookedSlots = document.querySelectorAll('.slot-booked');
+        const cancelModal = new bootstrap.Modal(document.getElementById('cancelModal'));
+        
+        bookedSlots.forEach(function(row) {
+            row.addEventListener('click', function() {
+                document.getElementById('c-group-title').textContent = this.getAttribute('data-group-title');
+                document.getElementById('c-slot-id').value = this.getAttribute('data-slot-id');
+                document.getElementById('c-modal-date').textContent = this.getAttribute('data-slot-date');
+                document.getElementById('c-modal-start').textContent = this.getAttribute('data-slot-start');
+                document.getElementById('c-modal-end').textContent = this.getAttribute('data-slot-end');
+                
+                cancelModal.show();
+
             });
         });
     });
