--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -46,17 +46,13 @@
                             <p class="mb-2"><strong>Type:</strong> <span th:text="${group.type}"></span></p>
                             <p class="mb-2"><strong>Duration:</strong> <span th:text="${group.durationPerSlot} + ' minutes'"></span></p>
                             
-                            <!-- <div class="mt-3">
-                                <strong>Details:</strong>
-                                <ul class="list-unstyled mt-2 small">
-                                    <li th:each="slot : ${group.availabilitySlots}">
-                                        <span th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}"></span>: 
-                                        <span th:text="${slot.startTime} + ' - ' + ${slot.endTime}"></span>
-                                    </li>
-                                </ul>
-                            </div> -->
+                            <strong>Dates:</strong>
+                            
+                            <span th:each="slot,iterStat : ${group.availabilitySlots}">
+                                <span th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}"></span><span th:if="${!iterStat.last}">, </span>
+                            </span>
 
-                            <div class="mt-3">
+                            <div class="mt-2">
                 
                                 <div class="d-flex justify-content-end">
                                     <a th:href="@{/professor/bookings/view/{id}(id=${group.id})}" class="btn btn-info btn-sm">View</a>
@@ -68,18 +64,47 @@
             </div>
 
         </div>
+
         <!-- Student UI  -->
         <div class="row" th:if="${currentUser.role.name() == 'STUDENT'}">
 
             <div class=" d-flex justify-content-between align-items-center mb-3 border border-info p-3" >
+                    <h5 class="mb-0 ">Upcoming appointments</h5>
+            </div>
+
+            <div class="row mt-2">
+                <div th:if="${upcomingAppointments.isEmpty()}" class="alert alert-info">
+                    No upcoming appointments.
+                </div>
+                <div class="col-md-6 col-lg-4 mb-2" th:each="slot : ${upcomingAppointments}">
+                    <div class="card bg-info">
+                        <div class="card-header text-dark">
+                            <h5 class="mb-0 fw-bold" th:text="${slot.appointmentGroup.title}"></h5>
+                        </div>
+
+                        <div class="card-body bg-dark">
+                            <p class="mb-2"><strong>Date:</strong> <span th:text="${slot.date}"></span></p>
+                            <p class="mb-2"><strong>Time:</strong> <span th:text="${slot.startTime} + ' - ' + ${slot.endTime}"></span></p>
+
+                            <!-- <div class="mt-3">                
+                                <div class="d-flex justify-content-end">
+                                    <a th:href="@{/student/bookings/book/{id}(id=${slot.id})}" class="btn btn-info btn-sm">View & Book</a>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" d-flex justify-content-between align-items-center mb-3 border border-info p-3 mt-4" >
                     <h5 class="mb-0 ">Available appointments</h5>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-2">
                 <div th:if="${appointmentGroups.isEmpty()}" class="alert alert-info">
-                    No appointment available.
+                    No appointments available.
                 </div>
-                <div class="col-md-6 col-lg-4 mb-4" th:each="group : ${appointmentGroups}">
+                <div class="col-md-6 col-lg-4 mb-2" th:each="group : ${appointmentGroups}">
                     <div class="card bg-info">
                         <div class="card-header text-dark">
                             <h5 class="mb-0 fw-bold" th:text="${group.title}"></h5>
@@ -88,17 +113,15 @@
                         <div class="card-body bg-dark">
                             <p class="mb-2"><strong>Type:</strong> <span th:text="${group.type}"></span></p>
                             <p class="mb-2"><strong>Duration:</strong> <span th:text="${group.durationPerSlot} + ' minutes'"></span></p>
+
                             
-                            <!-- <div class="mt-3">
-                                <strong>Details:</strong>
-                                <ul class="list-unstyled mt-2 small">
-                                    <li th:each="slot : ${group.availabilitySlots}">
-                                        <span th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}"></span>: 
-                                        <span th:text="${slot.startTime} + ' - ' + ${slot.endTime}"></span>
-                                    </li>
-                                </ul>
-                            </div> -->
-                            <div class="mt-3">
+                            <strong>Dates:</strong>
+                            <span th:each="slot,iterStat : ${group.availabilitySlots}">
+                                <span th:text="${#temporals.format(slot.date, 'MM/dd/yyyy')}"></span><span th:if="${!iterStat.last}">, </span>
+                            </span>
+                            
+                            
+                            <div class="mt-2">
                 
                                 <div class="d-flex justify-content-end">
                                     <a th:href="@{/student/bookings/book/{id}(id=${group.id})}" class="btn btn-info btn-sm">View & Book</a>
