--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -25,11 +25,11 @@
 
         <!-- Professor UI  -->
 
-        <div class="row" th:if="${currentUser.role.name() == 'PROFESSOR'}">
+        <div class="row" th:if="${currentUser.role.name() == 'PROFESSOR' || currentUser.role.name() == 'TA'}">
 
             <div class=" d-flex justify-content-between align-items-center mb-3 border border-info p-3" >
                     <h5 class="mb-0">Appointment Groups</h5>
-                    <a href="/professor/appointments/create" class="btn btn-info text-dark fw-bold fs-6"><i class="bi bi-plus-circle-fill text-dark fs-6"></i> Create New </a>
+                    <a href="/professor/appointments/create" class="btn btn-info text-dark fw-bold fs-6" th:if="${currentUser.role.name() == 'PROFESSOR'}"><i class="bi bi-plus-circle-fill text-dark fs-6"></i> Create New </a>
             </div>
             
             <div class="row mt-4">
@@ -55,7 +55,8 @@
                             <div class="mt-2">
                 
                                 <div class="d-flex justify-content-end">
-                                    <a th:href="@{/professor/bookings/view/{id}(id=${group.id})}" class="btn btn-info btn-sm">View</a>
+                                    <a th:if="${currentUser.role.name() == 'PROFESSOR'}" th:href="@{/professor/bookings/view/{id}(id=${group.id})}" class="btn btn-info btn-sm">View</a>
+                                    <a th:if="${currentUser.role.name() == 'TA'}" th:href="@{/ta/bookings/view/{id}(id=${group.id})}" class="btn btn-info btn-sm">View</a>
                                 </div>
                             </div>
                         </div>
