--- a/src/main/resources/templates/create-appointment.html
+++ b/src/main/resources/templates/create-appointment.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-4 mb-3">
                             <label for="type" class="form-label">Appointment Type</label>
                             <select class="form-select" id="type" name="type" required>
                                 <option value="">-- Select Type --</option>
@@ -49,11 +49,15 @@
                             </select>
                             
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-4 mb-3">
                             <label for="durationPerSlot" class="form-label">Slot Duration (minutes)</label>
-                            <input type="number" class="form-control" id="durationPerSlot" name="durationPerSlot"
-                                   min="5" max="480" required placeholder="e.g., 15, 30, 45">
+                            <input type="number" class="form-control" id="durationPerSlot" name="durationPerSlot" min="5" max="480" required placeholder="e.g., 15, 30, 45">
         
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="gapBetweenSlots" class="form-label">Gap Between Slots (minutes)</label>
+                            <input type="number" class="form-control" id="gapBetweenSlots" name="gapBetweenSlots" min="0" max="60" placeholder="e.g., 0, 5, 10">
+                            <small class="text-muted">Leave blank for no gap</small>
                         </div>
                     </div>
 
